--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,13 @@ Package: rena
 Type: Package
 Title: Bulk Downloads From the ENA FTP File Downloader
 Version: 0.1.0
-Author: Nathanael Sheehan
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Authors@R: 
+    c(person(given = "Nathanael",
+             family = "Sheehan",
+             role = c("aut", "cre"),
+             email = "nathanaelsheehan@gmail.com",
+             comment = c(ORCID = "0000-0002-2779-0976"))
+Description: The rena package provides tools for bulk downloading read/analysis files from ENA via FTP using the `ena-ftp-downloader`.
 License: Apache License (>= 2)
 Encoding: UTF-8
 LazyData: true
