--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,8 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 URL: https://natesheehan.github.io/rena/
+Imports: httr,
+utils
 Suggests: 
     knitr,
     rmarkdown
